--- a/Powwow/Base.lproj/Main.storyboard
+++ b/Powwow/Base.lproj/Main.storyboard
@@ -148,17 +148,10 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Chats" id="UFj-lL-c0O">
-                        <barButtonItem key="rightBarButtonItem" style="plain" id="RKE-sx-GPb">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="uAc-da-sYU">
-                                <rect key="frame" x="519" y="7" width="61" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Settings ">
-                                    <color key="titleColor" red="0.12941176469999999" green="0.69411764710000001" blue="0.73725490199999999" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <connections>
-                                    <segue destination="dm5-GO-Xi3" kind="show" id="MW9-57-NA2"/>
-                                </connections>
-                            </button>
+                        <barButtonItem key="rightBarButtonItem" title="Settings" id="VQ4-Z4-ZP3">
+                            <connections>
+                                <segue destination="dm5-GO-Xi3" kind="show" id="y7u-pf-Mon"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
@@ -175,7 +168,7 @@
         <!--Location Settings-->
         <scene sceneID="mpD-NN-K8O">
             <objects>
-                <viewController id="dm5-GO-Xi3" customClass="LocationController" sceneMemberID="viewController">
+                <viewController id="dm5-GO-Xi3" customClass="SliderViewController" customModule="Powwow" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="n2A-3m-ykT"/>
                         <viewControllerLayoutGuide type="bottom" id="fb5-Je-vL5"/>
@@ -184,18 +177,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="backgroundwithlogo" translatesAutoresizingMaskIntoConstraints="NO" id="hD7-pb-Plp">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backgroundwithlogo" translatesAutoresizingMaskIntoConstraints="NO" id="hD7-pb-Plp">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="QKj-ne-CSt">
-                                <rect key="frame" x="18" y="500" width="564" height="31"/>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </slider>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gq2-nG-aah">
-                                <rect key="frame" x="289" y="462" width="22" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gq2-nG-aah">
+                                <rect key="frame" x="89" y="462" width="422" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="22" id="jqg-3H-i4D"/>
-                                    <constraint firstAttribute="height" constant="30" id="mgZ-jA-UbX"/>
+                                    <constraint firstAttribute="height" constant="30" id="bJh-v4-rEd"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -215,29 +203,40 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="50" minValue="50" maxValue="10000" translatesAutoresizingMaskIntoConstraints="NO" id="QKj-ne-CSt">
+                                <rect key="frame" x="87" y="500" width="426" height="31"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <action selector="sliderChanged:" destination="dm5-GO-Xi3" eventType="valueChanged" id="yRR-W9-eqh"/>
+                                </connections>
+                            </slider>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="tintColor" red="0.12941176469999999" green="0.69411764710000001" blue="0.73725490199999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="hD7-pb-Plp" firstAttribute="bottom" secondItem="fb5-Je-vL5" secondAttribute="top" id="7rP-id-vOV"/>
+                            <constraint firstItem="QKj-ne-CSt" firstAttribute="centerX" secondItem="o9b-tY-cqz" secondAttribute="centerX" id="8K3-lU-bE4"/>
                             <constraint firstItem="o9b-tY-cqz" firstAttribute="top" secondItem="n2A-3m-ykT" secondAttribute="bottom" constant="88" id="8S3-cT-jhW"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="hD7-pb-Plp" secondAttribute="trailing" constant="-20" id="ER4-mc-Fum"/>
-                            <constraint firstItem="fb5-Je-vL5" firstAttribute="top" secondItem="QKj-ne-CSt" secondAttribute="bottom" constant="70" id="VhB-H6-TDz"/>
-                            <constraint firstItem="gq2-nG-aah" firstAttribute="centerX" secondItem="A82-nm-IbF" secondAttribute="centerX" id="Vrh-hu-WJ2"/>
-                            <constraint firstItem="o9b-tY-cqz" firstAttribute="centerX" secondItem="QKj-ne-CSt" secondAttribute="centerX" constant="0.5" id="WJ9-Br-lkg"/>
-                            <constraint firstItem="QKj-ne-CSt" firstAttribute="centerX" secondItem="gq2-nG-aah" secondAttribute="centerX" id="Z89-yp-6Iz"/>
-                            <constraint firstItem="gq2-nG-aah" firstAttribute="centerX" secondItem="QKj-ne-CSt" secondAttribute="centerX" id="jnx-zV-AJ5"/>
-                            <constraint firstItem="QKj-ne-CSt" firstAttribute="leading" secondItem="A82-nm-IbF" secondAttribute="leadingMargin" id="oMe-Jg-xAg"/>
-                            <constraint firstItem="hD7-pb-Plp" firstAttribute="leading" secondItem="A82-nm-IbF" secondAttribute="leading" id="pmp-Q3-4pE"/>
-                            <constraint firstItem="QKj-ne-CSt" firstAttribute="top" secondItem="gq2-nG-aah" secondAttribute="bottom" constant="8" id="prD-Wx-PcS"/>
-                            <constraint firstItem="hD7-pb-Plp" firstAttribute="top" secondItem="n2A-3m-ykT" secondAttribute="bottom" id="rUH-3H-Ymo"/>
+                            <constraint firstItem="hD7-pb-Plp" firstAttribute="bottom" secondItem="fb5-Je-vL5" secondAttribute="top" id="DUR-Xl-kH6"/>
+                            <constraint firstItem="hD7-pb-Plp" firstAttribute="top" secondItem="A82-nm-IbF" secondAttribute="top" id="Faa-Ug-656"/>
+                            <constraint firstItem="fb5-Je-vL5" firstAttribute="top" secondItem="QKj-ne-CSt" secondAttribute="bottom" constant="70" id="IPT-ob-dFi"/>
+                            <constraint firstItem="gq2-nG-aah" firstAttribute="trailing" secondItem="QKj-ne-CSt" secondAttribute="trailing" id="Vtz-NO-tT1"/>
+                            <constraint firstItem="QKj-ne-CSt" firstAttribute="centerX" secondItem="hD7-pb-Plp" secondAttribute="centerX" id="XcY-gf-9o1"/>
+                            <constraint firstItem="gq2-nG-aah" firstAttribute="leading" secondItem="QKj-ne-CSt" secondAttribute="leading" id="XmQ-aA-VOn"/>
+                            <constraint firstItem="QKj-ne-CSt" firstAttribute="top" secondItem="gq2-nG-aah" secondAttribute="bottom" constant="8" symbolic="YES" id="YBv-A4-yln"/>
+                            <constraint firstItem="hD7-pb-Plp" firstAttribute="leading" secondItem="A82-nm-IbF" secondAttribute="leading" id="bc1-xH-Kbr"/>
+                            <constraint firstItem="gq2-nG-aah" firstAttribute="centerX" secondItem="A82-nm-IbF" secondAttribute="centerX" id="cUp-pf-Kpg"/>
+                            <constraint firstItem="QKj-ne-CSt" firstAttribute="leading" secondItem="A82-nm-IbF" secondAttribute="leadingMargin" constant="69" id="d74-dA-Fyd"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Location Settings" id="4qe-Tt-s4Q"/>
+                    <connections>
+                        <outlet property="distanceLabel" destination="gq2-nG-aah" id="cSS-Od-2fM"/>
+                        <outlet property="distanceSlider" destination="QKj-ne-CSt" id="7rv-kv-94y"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mbT-IJ-JlB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2672" y="371"/>
+            <point key="canvasLocation" x="2702" y="371"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Nub-Qh-hK7">
