--- a/Powwow/Base.lproj/Main.storyboard
+++ b/Powwow/Base.lproj/Main.storyboard
@@ -68,21 +68,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xJf-7O-sgz">
-                                <rect key="frame" x="549" y="551" width="31" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="31" id="egY-bu-rQA"/>
-                                </constraints>
-                                <state key="normal" title="Post">
-                                    <color key="titleColor" red="0.12941176470588237" green="0.69411764705882351" blue="0.73725490196078436" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" red="0.050980396568775177" green="0.0078431377187371254" blue="0.0078431377187371254" alpha="1" colorSpace="deviceRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="sendMessage:" destination="2bX-ir-bm1" eventType="touchUpInside" id="k1l-NJ-tsh"/>
-                                </connections>
-                            </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="What's on your mind?" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ELW-oD-jGh">
-                                <rect key="frame" x="20" y="550" width="521" height="30"/>
+                                <rect key="frame" x="20" y="550" width="484" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="yes" spellCheckingType="yes" keyboardAppearance="light" enablesReturnKeyAutomatically="YES"/>
                                 <connections>
@@ -133,17 +120,30 @@
                                     <outlet property="delegate" destination="2bX-ir-bm1" id="3kf-X3-JeH"/>
                                 </connections>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xJf-7O-sgz">
+                                <rect key="frame" x="512" y="550" width="31" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="31" id="egY-bu-rQA"/>
+                                </constraints>
+                                <state key="normal" title="Post">
+                                    <color key="titleColor" red="0.12941176470588237" green="0.69411764705882351" blue="0.73725490196078436" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" red="0.050980396568775177" green="0.0078431377187371254" blue="0.0078431377187371254" alpha="1" colorSpace="deviceRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="sendMessage:" destination="2bX-ir-bm1" eventType="touchUpInside" id="k1l-NJ-tsh"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Ht1-On-41V" firstAttribute="top" secondItem="lIs-qE-yTT" secondAttribute="top" id="07p-md-qTw"/>
-                            <constraint firstItem="xJf-7O-sgz" firstAttribute="trailing" secondItem="lIs-qE-yTT" secondAttribute="trailingMargin" id="0ix-PP-S5m"/>
+                            <constraint firstItem="xJf-7O-sgz" firstAttribute="trailing" secondItem="lIs-qE-yTT" secondAttribute="trailingMargin" constant="-37" id="0ix-PP-S5m"/>
                             <constraint firstItem="ELW-oD-jGh" firstAttribute="top" secondItem="Ht1-On-41V" secondAttribute="bottom" constant="8" symbolic="YES" id="BME-X8-4HP"/>
                             <constraint firstItem="ELW-oD-jGh" firstAttribute="leading" secondItem="lIs-qE-yTT" secondAttribute="leadingMargin" id="CRQ-LO-zaQ"/>
                             <constraint firstItem="xJf-7O-sgz" firstAttribute="leading" secondItem="ELW-oD-jGh" secondAttribute="trailing" constant="8" symbolic="YES" id="DT7-FF-hnJ"/>
                             <constraint firstAttribute="bottom" secondItem="ELW-oD-jGh" secondAttribute="bottom" constant="20" symbolic="YES" id="K9u-H8-4q8"/>
                             <constraint firstItem="Ht1-On-41V" firstAttribute="leading" secondItem="lIs-qE-yTT" secondAttribute="leading" id="RVu-iO-oUq"/>
-                            <constraint firstItem="xJf-7O-sgz" firstAttribute="top" secondItem="Ht1-On-41V" secondAttribute="bottom" constant="9" id="T1a-Xu-lkO"/>
+                            <constraint firstItem="xJf-7O-sgz" firstAttribute="top" secondItem="Ht1-On-41V" secondAttribute="bottom" constant="8" id="T1a-Xu-lkO"/>
                             <constraint firstAttribute="trailing" secondItem="Ht1-On-41V" secondAttribute="trailing" id="WZX-db-Sq4"/>
                         </constraints>
                     </view>
@@ -163,7 +163,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xJU-Vx-yUh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1967.9999999999998" y="371.99999999999994"/>
+            <point key="canvasLocation" x="1967" y="371"/>
         </scene>
         <!--Location Settings-->
         <scene sceneID="mpD-NN-K8O">
@@ -180,10 +180,10 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backgroundwithlogo" translatesAutoresizingMaskIntoConstraints="NO" id="hD7-pb-Plp">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gq2-nG-aah">
-                                <rect key="frame" x="89" y="462" width="422" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0k" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gq2-nG-aah">
+                                <rect key="frame" x="89" y="462" width="422" height="36"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="bJh-v4-rEd"/>
+                                    <constraint firstAttribute="height" constant="36" id="bJh-v4-rEd"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -222,7 +222,7 @@
                             <constraint firstItem="gq2-nG-aah" firstAttribute="trailing" secondItem="QKj-ne-CSt" secondAttribute="trailing" id="Vtz-NO-tT1"/>
                             <constraint firstItem="QKj-ne-CSt" firstAttribute="centerX" secondItem="hD7-pb-Plp" secondAttribute="centerX" id="XcY-gf-9o1"/>
                             <constraint firstItem="gq2-nG-aah" firstAttribute="leading" secondItem="QKj-ne-CSt" secondAttribute="leading" id="XmQ-aA-VOn"/>
-                            <constraint firstItem="QKj-ne-CSt" firstAttribute="top" secondItem="gq2-nG-aah" secondAttribute="bottom" constant="8" symbolic="YES" id="YBv-A4-yln"/>
+                            <constraint firstItem="QKj-ne-CSt" firstAttribute="top" secondItem="gq2-nG-aah" secondAttribute="bottom" constant="2" id="YBv-A4-yln"/>
                             <constraint firstItem="hD7-pb-Plp" firstAttribute="leading" secondItem="A82-nm-IbF" secondAttribute="leading" id="bc1-xH-Kbr"/>
                             <constraint firstItem="gq2-nG-aah" firstAttribute="centerX" secondItem="A82-nm-IbF" secondAttribute="centerX" id="cUp-pf-Kpg"/>
                             <constraint firstItem="QKj-ne-CSt" firstAttribute="leading" secondItem="A82-nm-IbF" secondAttribute="leadingMargin" constant="69" id="d74-dA-Fyd"/>
