--- a/Powwow/powwow-launch-screen.storyboard
+++ b/Powwow/powwow-launch-screen.storyboard
@@ -15,7 +15,18 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backgroundwithlogo" translatesAutoresizingMaskIntoConstraints="NO" id="QJ7-l3-vkf">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="QJ7-l3-vkf" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="8CP-bN-2NM"/>
+                            <constraint firstItem="QJ7-l3-vkf" firstAttribute="bottom" secondItem="xb3-aO-Qok" secondAttribute="top" id="Hw1-XT-zYI"/>
+                            <constraint firstItem="QJ7-l3-vkf" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="oSD-n9-VUw"/>
+                            <constraint firstAttribute="trailing" secondItem="QJ7-l3-vkf" secondAttribute="trailing" id="sLU-U8-Koj"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -23,4 +34,7 @@
             <point key="canvasLocation" x="52" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="backgroundwithlogo" width="800" height="1280"/>
+    </resources>
 </document>
